--- a/back/package.json
+++ b/back/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "npm-watch": "^0.11.0"
+    "npm-watch": "^0.11.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "prisma": "^4.10.1"
